More LittleFS/Flash changes for game saves

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,4 @@ idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS ".")
 
 # uncomment to copy ROM partition with code, comment to only copy code
-#littlefs_create_partition_image(littlefs ../flash_data FLASH_IN_PROJECT)
+littlefs_create_partition_image(littlefs ../flash_data FLASH_IN_PROJECT)
