--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "components/espp"]
 	path = components/espp
-	url = git@github.com:esp-cpp/espp
+	url = https://github.com/esp-cpp/espp.git
